<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="156dp"
        android:layout_height="159dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/roll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/current_roll"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_view" />


    <TextView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/dash"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll_view" />


    <TextView
        android:id="@+id/select_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/select_a_dice"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="26dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="355dp"
        app:layout_constraintTop_toBottomOf="@+id/select_view" >


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:paddingBottom="10dp">
                <RadioGroup
                    android:id="@+id/dice_group_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checkedButton="@+id/one_points_rd"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <RadioButton
                        android:id="@+id/four_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/_4_sided" />

                    <RadioButton
                        android:id="@+id/eight_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/_8_sided" />

                    <RadioButton
                        android:id="@+id/twelve_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"

                        android:text="@string/_12_sided" />

                    <RadioButton
                        android:id="@+id/thirty_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/_30_sided" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/dice_group_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checkedButton="@+id/one_points_rd"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <RadioButton
                        android:id="@+id/six_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"

                        android:text="@string/_6_sided" />

                    <RadioButton
                        android:id="@+id/ten_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/_10_sided" />

                    <RadioButton
                    android:id="@+id/twenty_sided"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/_20_sided" />

                    <RadioButton
                        android:id="@+id/true_ten_sided"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/true_10_sided" />
                </RadioGroup>
            </TableRow>

        </TableLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/one_roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roll_one" />


                    <Button
                        android:id="@+id/two_roll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roll_two" />

                </TableRow>

                <TableRow
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:paddingBottom="10dp">

                    <Button
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear" />

                </TableRow>
            </TableLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>